# xPare

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  LICENSE-MIT  Makefile  README.md  SECURITY.md  clippy.toml  deny.toml  mutants.toml  rust-toolchain.toml
.agents/skills/security-finding-triage/: SKILL.md
.agents/skills/security-finding-triage/agents/: openai.yaml
.cargo/: config.toml  mutants.toml
.claude/skills/security-finding-triage/: SKILL.md
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md  release.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/codeql/queries/: README.md
.github/codeql/queries/python/: qlpack.yml
.github/codeql/queries/rust/: qlpack.yml
.github/workflows/: advisories.yml  ci.yml  codeql.yml  hygiene.yml  proofs.yml  release-fuzz.yml  release.yml  review.yml  scorecard.yml
cli/: Cargo.toml
cli/src/: main.rs
cli/tests/: cli.rs
core/: Cargo.toml
core-ffi/: Cargo.toml  cbindgen.toml
core-ffi/include/: safetystrip.h  xpare.h
core-ffi/src/: lib.rs
core-ffi/tests/: abi_roundtrip.rs
core/benches/: transform.rs  transform_large.rs
core/src/: config.rs  lib.rs  pipeline.rs
core/src/ops/: case.rs  defang.rs  html.rs  html_to_markdown.rs  indicators.rs  lines.rs  markdown.rs  mask.rs  mod.rs  urls.rs  whitespace.rs  wipe.rs
core/tests/: clean_urls.rs  config_roundtrip.rs  corpus_replay.rs  defang.proptest-regressions  defang.rs  determinism.proptest-regressions  determinism.rs  golden.rs  html_to_markdown.rs  mask_identifiers.rs  ordering.rs  perf_guard.rs  pipeline.rs  reference_transform.rs  strippers.rs  throughput.rs
core/tests/corpus/clean_urls/: fragment.txt  mixed.txt  trackers.txt
core/tests/corpus/defang/: already_defanged.txt  ips.txt  mixed.txt  urls.txt
core/tests/corpus/html/: angle_flood.html  comment_edge_cases.html  control_chars_nul.html  deeply_nested_div.html  entity_edge_cases.html  huge_repeated_tag.html  invalid_utf8.html  numeric_entity_flood.html  quoted_gt_attr.html  raw_text_tricky.html  stray_angles.html  unclosed_script.html
core/tests/corpus/markdown/: backtick_storm.md  deep_blockquote.md  embedded_html.md  heading_spam.md  huge_input.md  huge_table.md  invalid_utf8.md  nested_emphasis_lists.md
core/tests/corpus/mask/: already_masked.txt  control_chars_nul.txt  mixed.txt  punctuation.txt
core/tests/corpus/pipeline/: doc.md  email_snippet.html  mixed_rich.txt  nul_control.txt  whitespace_only.txt
docs/: agent-workflow.md  deferred-work.md  performance.md  release-model.md
docs/agent-tasks/: core-transform.md  dependency-ci.md  ffi-boundary.md  review-finding-closure.md  security-privacy.md
docs/exec-plans/active/: 0001-initial-rearch.md  0002-performance-ceiling-and-optimization-loop.md  0003-macos-release-plumbing.md  0004-extraction-defang-url-clean.md  0005-canonical-pipeline-ordering.md  0011-config-resource-envelope.md  0013-anti-slop-hygiene.md
docs/exec-plans/completed/: 0001-initial-rearch.md  0003-macos-release-plumbing.md  0004-deep-codex-security-scan.md  0004-extraction-defang-url-clean.md  0005-canonical-pipeline-ordering.md  0005-security-finding-fixes.md  0006-security-regression-guards.md  0007-review-finding-closure-workflow.md  0008-privacy-masking.md  0009-html-to-markdown-conversion.md  0010-mask-menu-submenu.md  0011-config-resource-envelope.md  0011-release-fuzz-gate.md  0012-ai-native-verification-workflow.md  0012-paste-large-buffers-as-files.md  0013-anti-slop-hygiene.md  0013-macos-clipboard-image-ocr.md  0014-codeql-and-mechanical-checks-research.md  0014-continuous-image-ocr.md  0014-performance-test-coverage-review.md  0014-pr42-ocr-review-followup.md  0014-release-workflow-credential-boundary.md  0015-codeql-baseline-and-posture-checks.md  0015-main-dev-preview-artifact.md  0016-codeql-action-pin-comment-closure.md  0016-custom-codeql-policy-queries.md  0017-agentic-security-finding-triage.md  0017-growth-envelope-review-closure.md  0017-macos-ocr-review-closure.md  0017-main-ocr-recovery.md  0017-top-level-quality-workflow-strategy.md  0018-settings-config-envelope-review-closure.md  0019-continuous-mode-menu-bar-icon.md  0019-supply-chain-dependency-review-policy.md  0020-codex-dependabot-review-guidance.md
docs/guardrails/: agentic-security-finding-triage.md  code-and-test-hygiene.md  content-logging-and-clipboard-safety.md  dependency-posture.md  ffi-boundary-and-abi-stability.md  macos-posture.md  memory-safety.md  privacy-and-data-handling.md  review-finding-closure.md  shell-contract.md  transform-correctness-and-adversarial-input.md
docs/templates/: correctness-brief.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: clean_urls.rs  defang.rs  html_to_markdown.rs  mask_identifiers.rs  parse_config.rs  strip_html.rs  strip_markdown.rs  transform_pipeline.rs
fuzz/regressions/: README.md
scripts/: overnight-fuzz.sh
shells/linux/: README.md
shells/macos/: .swift-format  .swiftlint.yml  Package.swift  README.md  build.sh  generate-icon.py  package-app.sh  release.sh
shells/macos/Sources/CSafetyStrip/: dummy.c
shells/macos/Sources/CXPare/: dummy.c
shells/macos/Sources/SafetyStripApp/: SafetyStripApp.swift  SettingsView.swift
shells/macos/Sources/SafetyStripCore/: TransformConfig.swift  Transformer.swift
shells/macos/Sources/SafetyStripKit/: HotkeyManager.swift  ImageTextRecognizer.swift  PasteFileStore.swift  Pasteboard.swift  Settings.swift  StripController.swift
shells/macos/Sources/XPareApp/: HotkeyComboMenu.swift  SafetyStripApp.swift  SettingsView.swift  XPareApp.swift
shells/macos/Sources/XPareCore/: TransformConfig.swift  Transformer.swift
shells/macos/Sources/XPareKit/: ClipboardMonitor.swift  HotkeyComboDisplay.swift  HotkeyManager.swift  ImageTextRecognizer.swift  PasteFileStore.swift  Pasteboard.swift  Settings.swift  StripController.swift
shells/macos/Tests/SafetyStripCoreTests/: TransformConfigTests.swift  (+1 more)
shells/windows/: README.md
xtask/: Cargo.toml
xtask/src/: main.rs
(+33 files in other folders)
