# xPare workspace.
#
# Members:
#   core      - pure, deterministic transformation core (#![forbid(unsafe_code)], no OS/IO/net)
#   core-ffi  - thin C ABI shim over `core` (the ONLY crate allowed to use `unsafe`)
#   cli       - headless harness over `core` (the agent's own validation/fuzz driver)
#   xtask     - mechanical invariant enforcement (run via `cargo xtask ...`)
#
# `fuzz/` is deliberately NOT a member: it is its own workspace so libFuzzer and
# the nightly-only toolchain never leak into normal stable builds.
[workspace]
resolver = "2"
members = ["core", "core-ffi", "cli", "xtask"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
license = "MIT OR Apache-2.0"
repository = "https://github.com/xpare/xpare"

# Workspace-wide lint policy — one source of truth for the anti-slop posture. Members
# opt in with `[lints] workspace = true`. Crate-SPECIFIC lints stay as source
# attributes on purpose because they are NOT workspace-wide: `core`'s
# `#![forbid(unsafe_code)]` (core-ffi must use unsafe), and the `print_stdout` /
# `print_stderr` denies on `core` + `core-ffi` (xtask and cli legitimately print).
[workspace.lints.rust]
# Kani proof harnesses in core/src/config.rs are gated behind `#[cfg(kani)]` (set only
# by `cargo kani`; normal builds never see it). Declare the cfg as expected so
# `unexpected_cfgs` (escalated to an error by `-D warnings` in CI) never flags it.
# Declaring it workspace-wide is harmless for the non-core crates.
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }
# Anti-slop, dead-`pub` lever: force any `pub` item not reachable outside its crate
# down to `pub(crate)`. The (already-on) `dead_code` lint then flags whatever is left
# truly unused — closing the gap where rustc's dead_code ignores `pub` items.
unreachable_pub = "deny"

[workspace.lints.clippy]
# Debug / scaffolding macros must never ship in any crate — common AI-slop residue.
dbg_macro = "deny"
todo = "deny"
unimplemented = "deny"
# Cap tangled control flow before it accretes. The whole tree passes today with
# headroom; the threshold lives in clippy.toml. (`too_many_lines` is deliberately NOT
# enabled — it only flags long table-driven *tests*, which are not the slop we target;
# assertion quality is covered by `cargo xtask check-mutants`.)
cognitive_complexity = "deny"

[workspace.dependencies]
# Config (de)serialization — the load-bearing part of the FFI boundary. Boring, ubiquitous, audited.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Markdown -> plain text. CommonMark is too irregular to reimplement safely; pulldown-cmark
# is the boring, well-audited standard (used by rustdoc/mdBook). default-features off drops the
# unused `getopts` bundled-binary feature, keeping the surface minimal.
pulldown-cmark = { version = "0.12", default-features = false }
# Best-effort zeroization of heap buffers that have held clipboard content before they are freed.
zeroize = "1"
# Tooling only (xtask): generate and verify the frozen C header.
cbindgen = "0.27"
# Dev-only: property testing for determinism / round-trip / never-panics.
proptest = "1"
# Dev-only: benchmarking. default-features off drops the heavy plotters/rayon
# extras; `cargo_bench_support` is what lets it run as a `cargo bench` harness.
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }

[profile.release]
# Speed-tuned release artifacts. Transform latency on large clipboard/log buffers is
# a product requirement; keep safety/privacy posture enforced by `cargo xtask ci`.
# NOTE: panic stays "unwind" (the default) on purpose. The FFI shim wraps every
# call in `catch_unwind`, so a stray panic is converted to XP_ERR_INTERNAL at the
# boundary instead of unwinding across it (UB) or aborting the host app.
opt-level = 3
lto = true
codegen-units = 1
