[package]
name = "xpare-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
# Product-internal: the headless validation/fuzz harness binary, not a crates.io
# release. Marking it private (like xtask) keeps its `path` dep on core off the
# cargo-deny wildcard check and prevents an accidental `cargo publish`.
publish = false
description = "Headless harness over xpare-core: read stdin, apply a JSON config, write stdout. The agent's own validation/fuzz driver."

[[bin]]
name = "xpare"
path = "src/main.rs"

# Inherit the workspace lint policy. As a CLI, this binary legitimately writes to
# stdout/stderr, so the `print_*` denies are intentionally NOT workspace-wide.
[lints]
workspace = true

[dependencies]
# Intentionally dependency-light: arguments are parsed by hand to keep the
# harness boring and the dependency surface minimal. Config parsing lives in core.
xpare-core = { path = "../core" }
