[package]
name = "safetystrip-ffi"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
# Product-internal: a C-ABI staticlib/cdylib for the native shells, not a crates.io
# release. Marking it private (like xtask) keeps its `path` dep on core off the
# cargo-deny wildcard check and prevents an accidental `cargo publish`.
publish = false
description = "Thin, language-neutral C ABI shim over safetystrip-core. The only crate that uses `unsafe`."

[lib]
name = "safetystrip_ffi"
# staticlib for static-linking into the native shells; cdylib for dynamic consumers.
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
safetystrip-core = { path = "../core" }
zeroize = { workspace = true }
