[package]
name = "xpare-ffi"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
# Product-internal: a C-ABI staticlib/cdylib for the native shells, not a crates.io
# release. Marking it private (like xtask) keeps its `path` dep on core off the
# cargo-deny wildcard check and prevents an accidental `cargo publish`.
publish = false
description = "Thin, language-neutral C ABI shim over xpare-core. The only crate that uses `unsafe`."

[lib]
name = "xpare_ffi"
# staticlib ONLY for the C surface: every shell statically links libxpare_ffi.a by
# policy (no runtime dylib dependency, nothing to relocate or sign separately). A
# cdylib here is not just unused — it is the artifact that broke the rc.2 preview:
# with both lib types in target/release, `ld -lxpare_ffi` silently prefers the
# dylib, whose install_name is an absolute build-tree path, so the app only ran on
# the machine that built it. rlib stays for the Rust-side tests.
crate-type = ["staticlib", "rlib"]

# Inherit the workspace lint policy. core-ffi also carries `#![deny(unsafe_op_in_unsafe_fn)]`
# and the `print_*` denies as source attributes (the unsafe boundary is FFI-specific).
[lints]
workspace = true

[dependencies]
xpare-core = { path = "../core" }
zeroize = { workspace = true }
