[package]
name = "safetystrip-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Pure, deterministic, memory-safe text transformation core for SafetyStrip. No OS, I/O, or network."

[lib]
name = "safetystrip_core"

[lints.rust]
# The Kani proof harnesses in src/config.rs are gated behind `#[cfg(kani)]`. Kani
# sets that cfg when running `cargo kani`; normal builds never see it. Declare it as
# an expected cfg so the `unexpected_cfgs` lint (escalated by `-D warnings` in CI)
# does not flag it on the stable toolchain. This neither enables nor compiles the
# harnesses outside Kani — it only teaches the compiler the name is intentional.
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
pulldown-cmark = { workspace = true }
# Best-effort wiping of clipboard-derived intermediates in the pipeline (alloc
# feature is on by default; no OS/IO/network surface — see CORE_DEP_ALLOWLIST).
zeroize = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "transform"
harness = false

# Heavy "log file" benchmarks up to 256 MB. Separate target so the quick `transform`
# bench stays fast; run with `cargo bench -p safetystrip-core --bench transform_large`.
[[bench]]
name = "transform_large"
harness = false
