[package]
name = "xpare-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Pure, deterministic, memory-safe text transformation core for xPare. No OS, I/O, or network."

[lib]
name = "xpare_core"

# Inherit the workspace lint policy (unreachable_pub, dbg/todo/unimplemented bans, and
# the `cfg(kani)` expected-cfg declaration). Core also carries `#![forbid(unsafe_code)]`
# and the `print_*` denies as source attributes — those are core-specific, not workspace.
[lints]
workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
pulldown-cmark = { workspace = true }
# Best-effort wiping of clipboard-derived intermediates in the pipeline (alloc
# feature is on by default; no OS/IO/network surface — see CORE_DEP_ALLOWLIST).
zeroize = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "transform"
harness = false

# Heavy "log file" benchmarks up to 256 MB. Separate target so the quick `transform`
# bench stays fast; run with `cargo bench -p xpare-core --bench transform_large`.
[[bench]]
name = "transform_large"
harness = false
