[package]
name = "safetystrip-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

# Its own workspace on purpose: keeps libFuzzer and the nightly-only toolchain
# out of the main stable workspace.
[workspace]

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }
safetystrip-core = { path = "../core" }

[profile.release]
debug = 1

# Fuzz targets feed arbitrary bytes (lossy-decoded to &str) through the strippers
# and the full pipeline, asserting the core never panics. Run with:
#   cargo +nightly fuzz run strip_html
[[bin]]
name = "strip_html"
path = "fuzz_targets/strip_html.rs"
test = false
doc = false
bench = false

[[bin]]
name = "strip_markdown"
path = "fuzz_targets/strip_markdown.rs"
test = false
doc = false
bench = false

[[bin]]
name = "transform_pipeline"
path = "fuzz_targets/transform_pipeline.rs"
test = false
doc = false
bench = false

[[bin]]
name = "defang"
path = "fuzz_targets/defang.rs"
test = false
doc = false
bench = false

[[bin]]
name = "clean_urls"
path = "fuzz_targets/clean_urls.rs"
test = false
doc = false
bench = false

[[bin]]
name = "mask_identifiers"
path = "fuzz_targets/mask_identifiers.rs"
test = false
doc = false
bench = false
